# ensembl-genes

./: .coverage-tmp.html  .flake8  .gitignore  .licensee.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  NOTICE  README.md  conf.py  demo_validation.py  dummy_input.txt  explore_db.py  fasta_io.py  find_testcases.py  gff_io.py  hprc_test.yaml  id_manager.py  index.html  install.rst  lifton_id_mapper_v1_noncodissue.py  mapper.py  mkdocs.yml  mouse_test.yaml  mouse_test_guuids.txt  objects.inv  pylintrc  pyproject.toml  pytest.ini  requirements.txt  resolver_patch.py  setup.py  sitemap.xml  species.yaml  submit_lifton.sh  synteny.py  test_fetch.py  test_inputs.txt  test_inputs_fetcher.py  (+10 more)
.github/: dependabot.yml
.github/actions/python_build/: action.yml
.github/workflows/: ci.yml  ci_dev.yml  docs-ci.yml  docs.yml  linting.yml  notice.yml  publish.yml  python_ci.yml
api/: index.html
code_of_conduct/: index.html
containers/: README.md
containers/Red/: Dockerfile  README.md
containers/Red/use_existing_binary/: Dockerfile
containers/agat/: Dockerfile  README.md
containers/braker2/: Dockerfile  README.md
containers/cpc2/: Dockerfile  README.md
docs/: api.md  conf.py  metadata_source_map.md
ensembl/genes/automation/: index.html
ensembl/genes/automation/pre_release_ftp/: index.html
ensembl/genes/content/main_static_content/: index.html
ensembl/genes/content/main_static_murine_content/: index.html
ensembl/genes/info_from_registry/: index.html
ensembl/genes/info_from_registry/assign_species_prefix/: index.html
ensembl/genes/info_from_registry/assign_stable_space/: index.html
ensembl/genes/info_from_registry/build_anno_commands/: index.html
ensembl/genes/info_from_registry/check_if_annotated/: index.html
ensembl/genes/info_from_registry/check_stable_space_old_registry/: index.html
ensembl/genes/info_from_registry/create_config/: index.html
ensembl/genes/info_from_registry/create_pipe_reg/: index.html
ensembl/genes/info_from_registry/genebuild_start_pipeline/: index.html
ensembl/genes/info_from_registry/mysql_helper/: index.html
ensembl/genes/info_from_registry/registry_helper/: index.html
ensembl/genes/info_from_registry/seed_nonvert/: index.html
ensembl/genes/info_from_registry/start_pipeline_from_registry/: index.html
ensembl/genes/info_from_registry/taxonomy_helper/: index.html
ensembl/genes/info_from_registry/update_assembly_registry/: index.html
ensembl/genes/info_from_registry/write_metrics_to_registry/: index.html
ensembl/genes/metadata/: index.html
ensembl/genes/projects/: index.html
ensembl/genes/tracking/: index.html
ensembl_genes/: Red.py  Repeatmask_Red.py  StarIntrons.py  star2introns.py  update_assembly_registry.py
examples/count_genes/: connect_to_mysql_db.py  hello_world.py  test_perl_python_Hello.pm  test_perl_python_connect_db.pm
install/: index.html
mkdocs/: coverage.md  index.md  install.md  usage.md
mkdocs/scripts/: gen_ref_pages.py
pipelines/: download_protein_sequences.pl  dump_protein_sequences.pl  filter_assignments.py  filter_gene_symbols.py  gene_symbol_classifier.pm  gene_symbol_classifier_conf.pm  load_gene_symbols.pl
pipelines/gene_symbol_classifier/: .python-version  Dockerfile  GeneSymbolClassifier_conf.pm  GeneSymbolClassifier_production_conf.pm  README.md  add_gene_description.py  dump_protein_sequences.pl  filter_assignments.py  load_gene_symbols.pl  pyproject.toml
pipelines/gene_symbol_classifier/conf/: GeneSymbolClassifier_production_conf.pm
pipelines/human_pangenome_projection/: ._README.md  README.md  cli.py  pipeline.py  requirements.txt
pipelines/human_pangenome_projection/benchmarks/: manifest.example.json
pipelines/human_pangenome_projection/scripts/: ._benchmark_harness.py  ._create_cluster_archive.sh  ._download_test_data.sh  benchmark_harness.py  build_minimal_test_dataset.py  create_cluster_archive.sh  download_test_data.sh  extract_chr14_data.py  investigate_issues.py  investigate_mapping_issues.py  validate_mapping_quality.py
pipelines/human_pangenome_projection/src/: __init__.py  config.py  fasta_handler.py  gff3_parser.py  gff3_writer.py  models.py
pipelines/human_pangenome_projection/stages/: __init__.py  coordinate_projection.py  gap_filling.py  internal_realign.py  mapping.py  refinement.py  sex_chromosome.py  synteny.py
pipelines/human_pangenome_projection/validation/: __init__.py  protein.py  statistics.py  structural.py
pipelines/stable_id_mapper/: README.md  aligner.py  cigar_map.py  lifton_id_mapper.py  main.py  main_output_to_stable_id_event_sql.py
reference/summary/: index.html
sample/count_genes/: hello_world.py  run_ME_first.README  test_perl_python_Hello.pm  test_perl_python_connect_db.pm
scripts/: control_pipelines.py  gen_ref_pages.py
scripts/annotation_statistics/: README.md  pyproject.toml  stats.py
scripts/annotation_statistics/test_data/: Abrostola_tripartita-GCA_905340225.1_annotation_statistics.txt
scripts/dtol_tracking/: README.md  dtol_tracking.py  pyproject.toml
scripts/projects_page/: .python-version  README.md  aquafaang_dbs.txt  aquafaang_species.yaml  bge_species.yaml  bovreg_dbs.txt  bovreg_species.yaml  cbp_species.yaml  dtol_dbs.txt  dtol_species.yaml  geneswitch_dbs.txt  geneswitch_species.yaml  icons.txt  pyproject.toml  server_config.json  vgp_dbs.txt  vgp_species.yaml  write_yaml.py
scripts/projects_page/gb_projects_pages/: projects_pages.py
scripts/projects_page/projects_pages/: projects_pages.py
scripts/transcriptomic_data/: check_for_transcriptomic  check_for_transcriptomic.py  get_transcriptomic_data  get_transcriptomic_data.py
scripts/travis/: pylint_harness.sh
search/: search_index.json
src/python/ensembl/: __init__.py
tests/: conftest.py  test_annotation_qc_events.py  test_annotation_qc_features.py  test_check_buso_score.py  test_ensembl_loading.py  test_events.py  test_features.py  test_pid_overlap.py  test_placeholder.py
tests/rgb/: test_busco_diagnostics.py  test_loci.py  test_observability.py  test_summarize.py
usage/: index.html
(+238 files in other folders)
