[project]
name = "ensembl-genes"
version = "0.1.0"
description = "Tools for genome annotation"
requires-python = ">=3.11"
authors = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
maintainers = [
    {name = "Ensembl", email = "dev@ensembl.org"},
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "pymysql",
    "requests",
    "sqlalchemy == 1.4.9",
    "xmltodict",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "black (>=25.11.0)",
    "pylint (>=4.0.4)",
    "pytest (>=6.2.3,<7.0.0)",
    "sphinx (>=3.5.4,<4.0.0)",
    # MkDocs and plugins for building documentation locally / in CI
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocstrings[python]",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-coverage",
    "types-PyMySQL",
    "mypy",
]

[project.urls]
repository = "https://github.com/Ensembl/ensembl-genes"

[project.scripts]
star2introns = "ensembl.genes.star2introns:main"
pre_release_ftp = "ensembl.genes.automation.pre_release_ftp:main"
main_static_content = "ensembl.genes.content.main_static_content:main"
start_pipeline_from_registry = "ensembl.genes.info_from_registry.start_pipeline_from_registry:main"
beta_patcher = "ensembl.genes.metadata.beta_patcher:main"
core_meta_data = "ensembl.genes.metadata.core_meta_data:main"
busco_lineage_selector = "ensembl.genes.metrics.busco_lineage_selector:main"
busco_metakeys_patch = "ensembl.genes.metrics.busco_metakeys_patch:main"
check_busco_score = "ensembl.genes.metrics.check_busco_score:main"
[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.'MASTER']
init-hook = "import sys; sys.path.append('src/python')"
