[tool.poetry]
name = "gene_symbol_classifier_ehive_pipeline"
version = "0.1.0"
description = ""
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
