[tool.poetry]
name = "gsc_pipeline"
version = "0.4.0"
description = "GST - Gene Symbol Transformer) eHive pipeline"
authors = ["William Stark <william@ebi.ac.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
