[tool.poetry]
name = "annotation_statistics"
version = "0.1.0"
description = "Generate annotation statistics from GFF3 file"
authors = ["Leanne Haggerty <leanne@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
gffutils = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
