[tool.poetry]
name = "gb-projects-pages"
version = "1.0.4"
description = "CLI command for updating the Ensembl projects pages"
authors = ["leannehaggerty <leannehaggerty@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.22"
requests = "^2.25.0"
PyMySQL = "^0.10.1"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gb_projects_pages = "gb_projects_pages.projects_pages:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
