[tool.poetry]
name = "projects-pages"
version = "0.1.0"
description = ""
authors = ["leannehaggerty <leannehaggerty@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.22"
requests = "^2.31.0"
PyMySQL = "^0.10.1"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
